# cadview

./: .gitignore  CMakeLists.txt  cv_aci.c  cv_aci.h  cv_block.h  cv_block_attr_def.h  cv_block_ref.h  cv_block_ref_attr.h  cv_color.h  cv_drawing.h  cv_engine.c  cv_engine.h  cv_engine_atlas.h  cv_engine_unit.c  cv_engine_unit.h  cv_engine_vertex.h  cv_entity.c  cv_entity.h  cv_entity_options.h  cv_layer.h  cv_linalg.h  cv_line_tess.h  cv_named_object.h  cv_object.h  cv_object_attr.h  cv_object_global_attrs.c  cv_polyline.c  cv_polyline.h  cv_polyline_vertex.c  cv_polyline_vertex.h  cv_rtree.h  cv_variant.h  cv_window.h  litecad.h
src/: CMakeLists.txt
src/block/: cv_block.c  cv_block.h  cv_block_attr_def.h  cv_rtree.h
src/color/: cv_aci.c  cv_aci.h  cv_color.h
src/compat/: litecad.h
src/debug/: cv_logging.h
src/drawing/: cv_drawing.c  cv_drawing.h
src/entities/: cv_arc.c  cv_arc.h  cv_arctext.c  cv_arctext.h  cv_block_ref.c  cv_block_ref.h  cv_block_ref_attr.h  cv_circle.c  cv_circle.h  cv_construction_line.c  cv_construction_line.h  cv_ellipse.c  cv_ellipse.h  cv_entity.c  cv_entity.h  cv_entity_options.c  cv_entity_options.h  cv_entity_xdata.c  cv_entity_xdata.h  cv_hatch.c  cv_hatch.h  cv_line.c  cv_line.h  cv_mline.c  cv_mline.h  cv_mtext.c  cv_mtext.h  cv_point.c  cv_point.h  cv_polyline.c  cv_polyline.h  cv_polyline_vertex.c  cv_polyline_vertex.h  cv_shape.c  cv_shape.h  cv_text.c  cv_text.h
src/font/: cv_font.c  cv_font.h  cv_lcf.h  utf8proc.c  utf8proc.h
src/math/: cv_linalg.h
src/named_objects/: cv_dimstyle.h  cv_layer.c  cv_layer.h  cv_linetype.h  cv_mline_style.h  cv_named_object.c  cv_named_object.h  cv_pointstyle.h  cv_textstyle.h
src/object/: cv_object.c  cv_object.h  cv_object_global_props.c  cv_object_global_props.h  cv_object_prop.h  cv_variant.h
src/platform/: cv_platform_font.h  cv_platform_font_direct_write.c  cv_platform_font_fontconfig.c  cv_platform_window.h  cv_platform_window_gtk.c  gl.c  gl.h
src/render/: cv_camera_2d.h  cv_glcontext.h  cv_renderer.h  cv_vertex.h  cv_viewport.h
src/scene/: cv_line_tess.h  cv_scene.h  cv_scene_atlas.h  cv_scene_dc.h  cv_scene_unit.h
src/scene/tess2/: dict.c  dict.h  geom.c  geom.h  mesh.c  priorityq.c  priorityq.h  sweep.c  tess.c  tess.h
src/window/: cv_window.c  cv_window.h
